# HQCoreS3-face-recogniz

./: .gitignore  CMakeLists.txt  README.md  cp2win.sh  partitions.csv  sdkconfig  sdkconfig.old
components/HQCoreS3/: CMakeLists.txt  idf_component.yml
components/HQCoreS3/include/: HQCoreS3.h
components/HQCoreS3/source/: led.c  misc.c
main/: CMakeLists.txt  app_main.cpp  fr-httpd.cpp  fr-httpd.hpp  fr-main.cpp  fr-mdns.c  fr-mdns.h  fr-user.c  fr-user.h  fr-wifi.c  fr-wifi.h  idf_component.yml
main/www/: index_ov2640.html
